# TAK-Manager

./: .env.example  .env.prod.example  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_README.md  CONVERSION.md  Dockerfile  DockerfileDev  DockerfileProd  INSTALLER_GUIDE.md  README.DEV.md  README.md  SSE.md  app.py  app_dev.py  architecture.md  assistant_snippet_Hs+Hs+Hs+.txt  assistant_snippet_apYT3eQfbF.txt  assistant_snippet_kZZ9QrrtzN.txt  build_mac.sh  build_macos.sh  chatgtpprompt.md  cliff.toml  components.json  config.py  debug_app.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-manage.py  nodemon.json  ota_updates_events.md  package-lock.json  package.json  project-outline.txt  pyproject.toml  requirements-dev.txt  requirements-mac.txt  requirements.txt  (+13 more)
.github/: funding.yml
backend/: __init__.py
backend/routes/: certmanager_routes.py  dashboard_routes.py  data_package_route.py  docker_manager_routes.py  installer_routes.py  ota_routes.py  socketio.py  takserver_routes.py  transfer_route.py
backend/services/helpers/: docker_installer.py  get_ip.py  operation_status.py  run_command.py
client/: Dockerfile  index.html  package-lock.json  package.json  pwa-assets.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
client/.storybook/: main.ts  manager.ts  preview.ts  theme.ts
client/src/: App.jsx  App.tsx  env.d.ts  index.html  index.tsx  main.jsx  pwa.ts  vite-env.d.ts
client/src/dev-dist/: sw.js  sw.js.map  workbox-4da76df9.js  workbox-4da76df9.js.map
client/src/pages/: AdvancedFeatures.tsx  CertManager.jsx  CertManager.tsx  Dashboard.jsx  Dashboard.tsx  DataPackage.jsx  DataPackage.tsx  Login.tsx  Profile.tsx  Services.jsx  Takserver.tsx  Transfer.jsx
client/src/styles/: styles.css  tailwind.css
client/src/types/: global.d.ts
client/src/utils/: AuthContext.tsx  api-utils.ts  uploadProgress.ts
deployment/macos/: TAKManager-Installer.dmg  create_dmg.sh  create_icns.sh  dmg_background.html
dev_scripts/: release.js  setup_project.py
dev_scripts/version/: update-version.js
docs/: takserver_sse_events.md
docs/CertifcateCreation/: certflow.md
electron/: electron-builder.json  electron-builder.mac.json  electron-builder.win.json  package-lock.json  package.json
electron/docs/: setup.md
electron/entitlements/: mac.plist
electron/src/: main.js  preload.js
electron/src/ui/: index.html  renderer.js
electron/src/utils/: logger.js
electron/src/window/: windowManager.js
frontend/static/css/: styles.css
frontend/static/js/: dashboard.js
frontend/templates/components/: base.html  popup_base.html  search_bar.html
frontend/templates/data_package/: preference_item.html
scripts/: release.js
server/: Dockerfile  app.py  app_dev.py  pyproject.toml  requirements.docker.txt  requirements.txt
server/backend/: __init__.py
server/backend/config/: auth.py  logging_config.py
server/backend/middleware/: auth_middleware.py
server/backend/routes/: advanced_features_routes.py  auth_routes.py  certmanager.py  certmanager_routes.py  dashboard_routes.py  data_package_manager_routes.py  data_package_route.py  docker_manager_routes.py  ota_routes.py  port_manager_routes.py  socketio.py  takserver_api_routes.py  takserver_routes.py  transfer_route.py
server/backend/routes/api_docs/: takserver_route.md
server/backend/services/helpers/: directories.py  docker_installer.py  get_ip.py  operation_status.py  os_detector.py  run_command.py
server/backend/services/scripts/cert_manager/: cert_xml_editor.py  certmanager.py
server/backend/services/scripts/data_package_config/: README.md  data_package.py  data_package_manager.py  models.py
server/backend/services/scripts/data_package_config/modules/: certificates.py  custom_files.py  package_creator.py  preferences.py
server/backend/services/scripts/docker/: docker_checker.py  docker_compose_editor.py  docker_manager.py
server/backend/services/scripts/ota/: generate_content.py  ota_updates.py
server/backend/services/scripts/system/: log_manager.py  path_manager.py  system_monitor.py  thread_manager.py
server/backend/services/scripts/takserver/: cert_xml_editor.py  certconfig.py  check_status.py  connected_clients.py  core_config.py  fix_database.py  goal.txt  log_manager.py  takserver_installer.py  takserver_uninstaller.py
server/backend/services/scripts/transfer/: adb_controller.py  transfer.py
src/: App.jsx  index.html  main.jsx  socket.js
src/components/: ApplicationPreferences.jsx  Button.jsx  CotStreams.jsx  CustomScrollbar.jsx  CustomTooltip.tsx  InputField.jsx  Layout.jsx  Popup.jsx  PreferenceItem.jsx  Sidebar.jsx  TitleBar.jsx
src/hooks/: useFetch.js  useSocket.js
src/pages/: CertManager.jsx  Dashboard.jsx  DataPackage.jsx  Installers.jsx  QTM.jsx  Services.jsx  Takserver.jsx  Transfer.jsx
src/styles/: styles.css  tailwind.css
static/css/: styles.css
templates/: index.html  installers.html  services.html
templates/components/: button.html  title_bar.html
templates/data_package/: application_prefs.html  cot_item.html  data_package.html
templates/installers_components/: docker.html  otaupdate.html  takserver.html
templates/transfer/: adb_install.html
version/: update-version.js
(+248 files in other folders)
