[project]
name = "tak-manager"
version = "3.1.2"
description = "A comprehensive TAK Server management solution providing a modern web interface for managing and monitoring TAK (Team Awareness Kit) servers."
authors = [
    {name = "JShadowNull", email = "95039572+JShadowNull@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.8.0",
    "bottle>=0.13.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "docker>=7.1.0",
    "fastapi>=0.115.8",
    "h11>=0.14.0",
    "idna>=3.10",
    "packaging>=24.2",
    "pip>=25.0.1",
    "platformdirs>=4.3.6",
    "proxy_tools>=0.1.0",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "pydantic_core>=2.27.2",
    "pywebview>=5.4",
    "requests>=2.32.3",
    "sniffio>=1.3.1",
    "starlette>=0.45.3",
    "typing_extensions>=4.12.2",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
    "pyinstaller>=6.12.0",
    "setuptools>=68.0.0",
    "pyinstaller-hooks-contrib>=2025.1",
    "altgraph>=0.17.4; sys_platform == 'darwin'",
    "macholib>=1.16.3; sys_platform == 'darwin'",
    "pyobjc-core>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Security>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=11.0; sys_platform == 'darwin'",
    "pyqt5>=5.15.11",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false