[project]
name = "tak-manager"
version = "3.1.2"
description = "A comprehensive TAK Server management solution providing a modern web interface for managing and monitoring TAK (Team Awareness Kit) servers."
authors = [
    { name = "JShadowNull", email = "95039572+JShadowNull@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13.0,<3.14"
dependencies = [
    "annotated-types (>=0.7.0,<1.0.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "bottle (>=0.13.2,<0.14.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "idna (>=3.10,<4.0.0)",
    "packaging (>=24.2,<25.0.0)",
    "pip (>=25.0.1,<26.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "proxy_tools (>=0.1.0,<0.2.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic_core (>=2.27.2,<3.0.0)",
    "pywebview (>=5.4,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "typing_extensions (>=4.12.2,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<1.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "pyinstaller-hooks-contrib (>=2025.1,<2026.0)",
    "altgraph (>=0.17.4,<1.0.0); sys_platform == 'darwin'",
    "macholib (>=1.16.3,<2.0.0); sys_platform == 'darwin'",
    "pyobjc-core (>=11.0,<12.0); sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa (>=11.0,<12.0); sys_platform == 'darwin'",
    "pyobjc-framework-Quartz (>=11.0,<12.0); sys_platform == 'darwin'",
    "pyobjc-framework-Security (>=11.0,<12.0); sys_platform == 'darwin'",
    "pyobjc-framework-WebKit (>=11.0,<12.0); sys_platform == 'darwin'",
    "pyqt6 (>=6.8.1,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
